--- a/src/app/teams/teams.component.html
+++ b/src/app/teams/teams.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <h1>Teams</h1>
   <mat-accordion>
-    <app-team [name]="team.name" [players]="team.players" *ngFor="let team of dataService.teams"></app-team>
+    <app-team [name]="team.name" [players]="team.players" *ngFor="let team of (teams | async)"></app-team>
   </mat-accordion>
 </div>
